Fix project phase date format

--- a/json_schema/Entity and Component Definitions/Sample Data/project/components/project.phase_payload_aa8u08yn.json
+++ b/json_schema/Entity and Component Definitions/Sample Data/project/components/project.phase_payload_aa8u08yn.json
@@ -1,5 +1,5 @@
 {
     "phase_name": "Construction Documents",
-    "phase_start": "2023.09.02",
-    "phase_end": "2023.11.01"
+    "phase_start": "2023-09-02",
+    "phase_end": "2023-11-01"
 }
