--- a/json_schema/Entity and Component Definitions/Sample Data/project/components/project.phase_payload_bvodpmmy.json
+++ b/json_schema/Entity and Component Definitions/Sample Data/project/components/project.phase_payload_bvodpmmy.json
@@ -1,5 +1,5 @@
 {
     "phase_name": "Design Development",
-    "phase_start": "2023.07.02",
-    "phase_end": "2023.09.01"
+    "phase_start": "2023-07-02",
+    "phase_end": "2023-09-01"
 }
