--- a/json_schema/Entity and Component Definitions/Sample Data/project/components/project.phase_payload_k2t7xkzv.json
+++ b/json_schema/Entity and Component Definitions/Sample Data/project/components/project.phase_payload_k2t7xkzv.json
@@ -1,5 +1,5 @@
 {
     "phase_name": "Construction Administration",
-    "phase_start": "2023.12.01",
-    "phase_end": "2024.12.01"
+    "phase_start": "2023-12-01",
+    "phase_end": "2024-12-01"
 }
