--- a/json_schema/Entity and Component Definitions/Sample Data/project/components/project.phase_payload_r353lg9c.json
+++ b/json_schema/Entity and Component Definitions/Sample Data/project/components/project.phase_payload_r353lg9c.json
@@ -1,5 +1,5 @@
 {
     "phase_name": "Schematic Design",
-    "phase_start": "2023.05.02",
-    "phase_end": "2023.07.01"
+    "phase_start": "2023-05-02",
+    "phase_end": "2023-07-01"
 }
